MockFtpServer Change Log
-------------------------------------------------------------------------------

Changes in version 2.6 (Apr 2015)
------------------------------------------
- BUG #25: OutOfMemoryError; clean up closed sessions. Session: Added boolean Session.isClosed(). AbstractFtpServer: Clean up closed sessions.


Changes in version 2.5 (May 2014)
------------------------------------------
- Fix #23 PWD response should have commentary: "{0}" is current directory.
  Also adjusted reply text for MKD to adhere to RFC959: "{0}" created.
- Removed deprecation of assertSessionReply(int,Object)
- Fix broken internal links on the web site pages.
- Update “Log4J Configuration Required to See Log Output” section on “FakeFtpServer – Getting Started” with info for SLF4J.
- Added MockFtpServer logo image. Thanks to cooltext.com.


Changes in version 2.4 (15 Jul 2012)
------------------------------------------
- FEATURE #2466395: Remove log4j dependency. Switch to using SLF4J (http://www.slf4j.org/).
- FEATURE #3544349: Return MockFtpServer information as part of connect 220 response.
- Upgrade to Groovy 1.7.10; fix Maven site plugin incompatibility.
- Change “pom.xml” to use SFTP to deploy to Maven repo.


Changes in version 2.3 (05 Jun 2011)
------------------------------------------
- FEATURE #2996739: Use a dynamically chosen free port number ("ephemeral")for the server control port
  if you specify 0 for the serverControlPort property of FakeFtpServer or StubFtpServer. Then call
  getServerControlPort() AFTER start() has been called to determine the actual port number being used.
  This is useful if you are running on a system where the default port (21) is already in use or cannot
  be bound from a user process (such as Unix).
- FEATURE #3304849: Add a new readData(int numBytes) to Session
- BUG #3103132: shutting down takes too long.
 

Changes in version 2.2 (23 Mar 2010)
------------------------------------------